# nvidia-gpu-monitor

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  build.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-linux.yml  build-windows.yml  build.yml  release.yml
src/: gpu_monitor.cpp  gpu_monitor.h  main.cpp  main_linux.cpp  main_win32.cpp  ui.cpp  ui.h
src/platform/: platform.h  platform_linux.cpp  platform_win32.cpp
